--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,5 @@
 @import "./container";
 @import "./blocks/header";
 @import "./blocks/hero";
+@import "./blocks/dreams";
+@import "./blocks/community";
