--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,28 @@
   --clr-green:#299764;
 }
 
+.dark {
+  --clr-black:white;
+  --clr-white:black;
+  --clr-green:#299764;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.4);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 20px;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -35,12 +57,13 @@
 
 body {
   font-family: "Montserrat", serif;
+  background-color: var(--clr-white);
 }
 
 .container {
-  width: 1240px;
+  max-width: 1240px;
   margin: 0 auto;
-  padding-inline: 0 20px;
+  padding: 0 20px;
 }
 
 .site-header {
@@ -57,16 +80,23 @@ body {
 .header__left-wrapper {
   display: flex;
   align-items: center;
+  justify-content: start;
   gap: 20px;
 }
 
 .navbar {
   display: flex;
   align-items: center;
+  justify-content: start;
+}
+
+.navbar__item {
+  position: relative;
 }
 
 .navbar__link {
   position: relative;
+  margin-top: 0;
   padding: 18px 16px;
   font-size: 18px;
   font-weight: 500;
@@ -74,11 +104,12 @@ body {
   color: var(--clr-black);
 }
 
-.navbar__item:nth-child(2) > .navbar__link, .navbar__item:nth-child(3) > .navbar__link {
+.navbar__item:nth-child(2), .navbar__item:nth-child(3) {
   padding-right: 30px;
+  cursor: pointer;
 }
 
-.navbar__item:nth-child(2) > .navbar__link::before, .navbar__item:nth-child(3) > .navbar__link::before {
+.navbar__item:nth-child(2)::before, .navbar__item:nth-child(3)::before {
   content: "";
   background-image: url("../../images/Icon.svg");
   background-repeat: no-repeat;
@@ -91,15 +122,19 @@ body {
   top: 0;
   bottom: 0;
   margin: auto 0;
+  transition: all 0.3s;
 }
 
 .header__right-wrapper {
   display: flex;
   align-items: center;
+  justify-content: start;
 }
 
 .header__phone-number {
   margin-right: 24px;
+  margin-top: 0;
+  padding: 18px;
   font-size: 18px;
   font-weight: 600;
   line-height: 21.94px;
@@ -122,18 +157,105 @@ body {
 .header__logout-btn {
   display: flex;
   align-items: center;
-  font-family: "Montserrat", serif;
+  justify-content: start;
+  margin-top: 0;
   padding: 18px 30px;
-  background-color: var(--clr-green);
-  color: var(--clr-white);
   font-size: 18px;
   font-weight: 500;
   line-height: 21.94px;
+  color: var(--clr-white);
+  font-family: "Montserrat", serif;
+  background-color: var(--clr-green);
   border-radius: 100px;
-  border: none;
+  border: 2px solid transparent;
   gap: 8px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.header__logout-btn:hover {
+  background-color: transparent;
+  border-color: var(--clr-green);
+  color: var(--clr-green);
 }
 
+.popop__wrapper {
+  padding: 10px;
+  opacity: 0;
+  height: 0px;
+  overflow: hidden;
+  border: none;
+  margin-top: 10px;
+  transition: all 0.3s;
+  position: absolute;
+  width: 100%;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1490196078);
+  z-index: 9999;
+}
+
+.popop__link {
+  width: 100%;
+  border-radius: 20px;
+  display: inline-block;
+  padding: 18px 0 18px 16px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.94px;
+  color: black;
+  transition: all 0.3s;
+}
+.popop__link:hover {
+  background-color: var(--clr-green);
+  color: white;
+}
+
+.navbar__item:nth-child(2):hover::before, .navbar__item:nth-child(3):hover::before {
+  transform: rotate(180deg);
+}
+
+.navbar__item:nth-child(2):hover > .popop__wrapper {
+  height: 195px;
+  padding: 10px;
+  border: 1px solid gray;
+  opacity: 1;
+}
+
+.navbar__item:nth-child(3):hover > .popop__wrapper {
+  height: 138px;
+  padding: 10px;
+  border: 1px solid gray;
+  opacity: 1;
+}
+
+.change-btn {
+  background-color: #272727;
+  color: white;
+}
+
+.header__menu-btn {
+  display: none;
+  margin-left: 16px;
+  background-color: transparent;
+  border: none;
+}
+
+@media (max-width: 1053px) {
+  .navbar, .header__phone-number {
+    display: none;
+  }
+  .header__menu-btn {
+    display: block;
+  }
+}
+@media (max-width: 834px) {
+  .header__mode-btn, .header__logout-btn {
+    display: none;
+  }
+  .site-header {
+    padding: 27px 0;
+  }
+}
 .hero-section {
   margin-top: 20px;
 }
@@ -189,7 +311,7 @@ body {
 }
 
 .swiper__content-wrapper {
-  width: 416px;
+  max-width: 416px;
   margin: 0 auto;
 }
 
@@ -233,6 +355,7 @@ body {
   width: 600px;
   display: flex;
   align-items: center;
+  justify-content: start;
   background-color: white;
   border-radius: 100px;
   overflow: hidden;
@@ -261,4 +384,343 @@ body {
   background-color: var(--clr-green);
   border: none;
   color: white;
+}
+
+@media (max-width: 1053px) {
+  .swiper-slide {
+    background-position: center;
+  }
+  .swiper-slide:nth-child(1) {
+    background-image: url("../../images/hero-tablet.png");
+  }
+}
+@media (max-width: 730px) {
+  .swiper-slide {
+    padding-top: 40px;
+  }
+  .swiper-slide:nth-child(1) {
+    background-image: url("../../images/hero-mobile.png");
+  }
+  .hero__form {
+    width: 100%;
+  }
+  .swiper-pagination {
+    display: flex;
+    justify-content: center;
+    transform: translate(0, -40px) !important;
+  }
+  .swiper__title {
+    font-size: 24px;
+    line-height: 29.26px;
+  }
+}
+.dreams-section {
+  padding: 100px 0 160px;
+}
+
+.dreams__content-wrapper {
+  max-width: 575px;
+  margin-bottom: 40px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.dreams__title {
+  margin-top: 0;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 43.88px;
+  color: var(--clr-black);
+}
+
+.dreams__text {
+  margin-top: 10px;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #555555;
+}
+
+.dreams__btn-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  margin-top: 40px;
+}
+
+.dreams__category-btn {
+  margin-top: 0;
+  padding: 19px 40px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+  color: var(--clr-black);
+  border: 1.5px solid #E5E7EA;
+  border-radius: 100px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.dreams__category-btn:hover {
+  background-color: var(--clr-green);
+  color: var(--clr-white);
+  border-color: var(--clr-green);
+}
+
+.dreams__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 24px;
+}
+
+.dreams__item {
+  width: 386px;
+  height: 433px;
+  background-color: blue;
+}
+
+@media (max-width: 831px) {
+  .dreams__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 16px;
+  }
+}
+@media (max-width: 640px) {
+  .dreams-section {
+    padding: 62px 0 160px;
+  }
+  .dreams__title {
+    margin-top: 0;
+    padding: 0;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 29.26px;
+    color: var(--clr-black);
+  }
+  .dreams__text {
+    margin-top: 6px;
+    padding: 0;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    color: #555555;
+  }
+  .dreams__btn-wrapper {
+    gap: 14px;
+    margin-top: 30px;
+  }
+  .dreams__category-btn {
+    margin-top: 0;
+    padding: 14px 20px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17.07px;
+    color: var(--clr-black);
+    border: 1.5px solid #E5E7EA;
+    border-radius: 100px;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  .dreams__category-btn:hover {
+    background-color: var(--clr-green);
+    color: var(--clr-white);
+    border-color: var(--clr-green);
+  }
+}
+@media (max-width: 500px) {
+  .dreams__item {
+    width: 100%;
+  }
+}
+.community-section {
+  padding: 100px 0;
+  background-color: #a6a6a6;
+}
+
+.community {
+  padding: 0 !important;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.community__left-wrapper {
+  width: 38%;
+  padding: 70px 0 70px 70px;
+}
+
+.community__auth {
+  display: inline-block;
+  margin-top: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+  color: #4285F4;
+  margin-bottom: 16px;
+  padding-left: 28px;
+  position: relative;
+}
+.community__auth::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/google.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  left: 0;
+}
+
+.community__title {
+  margin-top: 0;
+  padding: 0;
+  font-size: 38px;
+  font-weight: 500;
+  line-height: 50px;
+  color: #000;
+  margin-bottom: 30px;
+}
+
+.community__line {
+  display: inline-block;
+  width: 90%;
+  margin-bottom: 30px;
+  height: 2px;
+  border-radius: 20px;
+  background: linear-gradient(90deg, #EA4335 19.83%, #FBBC05 65%, #34A853 82.29%, #4285F4 100%);
+}
+
+.community__text {
+  margin-top: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  color: #555555;
+  margin-bottom: 16px;
+}
+
+.community__link {
+  margin-top: 0;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #555555;
+  display: inline-block;
+  width: 194px;
+  padding: 18px 0;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.94px;
+  background-image: radial-gradient(230.93% 230.93% at 102.01% 2.03%, #F9ED32 0%, #EE2A7B 36%, #D22A8A 44%, #8B2AB2 60%, #1B2AF0 83%, #002AFF 88%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  border-radius: 100px;
+  border: 1.5px solid transparent;
+  border-color: orange;
+}
+
+.community__right-wrapper {
+  width: 66%;
+  padding: 50px 0 40px 40px;
+  background-color: #299764;
+}
+
+.community__list {
+  display: flex;
+  padding-bottom: 20px;
+  gap: 20px;
+  overflow-y: auto;
+}
+
+.community__item {
+  min-width: 420px;
+  height: 333px;
+  background-color: white;
+  border-radius: 16px;
+}
+
+@media (max-width: 1034px) {
+  .community-section {
+    padding: 30px 20px;
+  }
+  .community {
+    flex-direction: column;
+  }
+  .community__left-wrapper, .community__right-wrapper {
+    width: 100%;
+  }
+  .community__left-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 24px !important;
+  }
+  .community__left-top-wrapper {
+    max-width: 320px;
+  }
+  .community__left-bottom-wrapper {
+    width: 275px;
+  }
+  .community__title {
+    margin-top: 0;
+    padding: 0;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    color: #000;
+    margin-bottom: 30px;
+  }
+  .community__line {
+    width: 3px;
+    height: 108px;
+  }
+}
+@media (max-width: 822px) {
+  .community__left-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: start;
+  }
+  .community__left-top-wrapper {
+    max-width: 100%;
+  }
+  .community__left-bottom-wrapper {
+    width: 100%;
+  }
+  .community__title {
+    margin-top: 0;
+    padding: 0;
+    font-size: 38px;
+    font-weight: 500;
+    line-height: 36px;
+    color: #000;
+  }
+  .community__line {
+    width: 100%;
+    height: 2px;
+  }
+  .community__right-wrapper {
+    padding: 20px 16px;
+  }
+  .community__item {
+    min-width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
