--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,7 +1,7 @@
 
 
 .container{
-    width: 1240px;
+    max-width: 1240px;
     margin: 0 auto;
-    padding-inline:  0 20px;
+    padding:0 20px;
 }
