--- a/scss/_veriables.scss
+++ b/scss/_veriables.scss
@@ -1,5 +1,12 @@
+
 :root{
     --clr-black:#000;
     --clr-white:white;
+    --clr-green:#299764;
+}
+
+.dark{
+    --clr-black:white;
+    --clr-white:black;
     --clr-green:#299764;
 }
