--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -4,29 +4,30 @@
 }
 
 .header{
-    @include Display();
-    justify-content: space-between;
+    @include Display($space:space-between);
 }
 .header__left-wrapper{
-    @include Display();
+    @include Display($space:start);
     gap: 20px;
 }
 .navbar{
-    @include Display();
+    @include Display($space:start);
 }
-
+.navbar__item{
+    position: relative;
+}
 .navbar__link{
     position: relative;
-    padding: 18px  16px;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 21.94px;
-    color: var(--clr-black);    
+    @include TextStyle($MT:0,$P:18px 16px,$FS:18px,$FW:500,$LH:21.94px,$CLR:var(--clr-black));
 }
-.navbar__item:nth-child(2) > .navbar__link, .navbar__item:nth-child(3) > .navbar__link{
+
+.navbar__item:nth-child(2), .navbar__item:nth-child(3){
     padding-right: 30px;
+    
+    cursor: pointer;
 }
-.navbar__item:nth-child(2) > .navbar__link::before, .navbar__item:nth-child(3) > .navbar__link::before{
+
+.navbar__item:nth-child(2)::before, .navbar__item:nth-child(3)::before{
     content: "";
     background-image: url("../../images/Icon.svg");
     background-repeat: no-repeat;
@@ -39,21 +40,18 @@
     top: 0;
     bottom: 0;
     margin: auto 0;
+    transition: all 0.3s;
 }
 
 .header__right-wrapper{
-    @include Display();
+    @include Display($space:start);
 }
 .header__phone-number{
     margin-right: 24px;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 21.94px;
-    color: var(--clr-black);    
+    @include TextStyle($MT:0,$P:18px,$FS:18px,$FW:600,$LH:21.94px,$CLR:var(--clr-black));
 }
 .header__mode-btn{
-    @include Display();
-    justify-content: center;
+    @include Display($space:center);
     width: 58px;
     height: 58px;
     background-color: #727272;
@@ -63,18 +61,99 @@
     margin-right: 16px;
 }
 .header__logout-btn{
-    @include Display();
+    @include Display($space:start);
+    @include TextStyle($MT:0,$P:18px 30px,$FS:18px,$FW:500,$LH:21.94px,$CLR:var(--clr-white));
     font-family: "Montserrat", serif;
-    padding: 18px 30px;
     background-color: var(--clr-green);
-    color: var(--clr-white);
+    border-radius: 100px;
+    border: 2px solid transparent;
+    gap: 8px;
+    transition: all 0.3s;
+    cursor: pointer;
+
+    &:hover{
+        background-color: transparent;
+        border-color: var(--clr-green);
+        color: var(--clr-green);
+    }
+}
+
+
+.popop__wrapper {
+    padding: 10px;
+    opacity: 0;
+    height: 0px;
+    overflow: hidden;
+    border: none;
+    
+    margin-top: 10px;
+    transition: all 0.3s;
+    position: absolute;
+    width: 100%;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px 0px #00000026;
+    z-index: 9999;
+}
+.popop__link {
+    width: 100%;
+    border-radius: 20px;
+    display: inline-block;
+    padding: 18px 0 18px 16px;
     font-size: 18px;
     font-weight: 500;
     line-height: 21.94px;
-    border-radius: 100px;
-    border: none;
-    gap: 8px;
+    color: black;
+    transition: all 0.3s;
+
+    &:hover{
+        background-color: var(--clr-green);
+        color: white;
+    }
 }
-.ulmasbek{
-    display: flex;
+.navbar__item:nth-child(2):hover::before, .navbar__item:nth-child(3):hover::before{
+    transform: rotate(180deg);
+}
+.navbar__item:nth-child(2):hover > .popop__wrapper{
+    height: 195px;
+    padding: 10px;
+    border: 1px solid gray;
+    opacity: 1;
+}
+.navbar__item:nth-child(3):hover > .popop__wrapper{
+    height: 138px;
+    padding: 10px;
+    border: 1px solid gray;
+    opacity: 1;
+}
+.change-btn{
+    background-color: #272727;
+    color: white;
+}
+
+.header__menu-btn{
+    display: none;
+    margin-left: 16px;
+    background-color: transparent;
+    border: none;
+}
+
+// 0 - 1053px
+@media (max-width:1053px){
+    .navbar, .header__phone-number{
+        display: none;
+    }
+    .header__menu-btn{
+        display: block;
+    }
+}
+
+// 0 - 834px
+@media (max-width:834px){
+  .header__mode-btn, .header__logout-btn{
+    display: none;
+  }
+  .site-header{
+    padding: 27px 0;
+  }
 }
